--- a/.classpath
+++ b/.classpath
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry combineaccessrules="false" kind="src" path="/ServicesProviderCommons"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/ServicesLibraries"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/GlassfishLibraries"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ServicesProviderCommons"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ServicesEJB"/>
 	<classpathentry kind="output" path="build/web/WEB-INF/classes"/>
 </classpath>
