--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1,6 +1,6 @@
 # COMMONS
 
-sp.common.page.title=Alodiga Services Provider
+sp.common.page.title=CG Tubines
 sp.common.page.home=Home
 sp.common.page.invoice=Invoice
 sp.common.page.admin.invoice= Invoice Manager
