--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1186,3 +1186,22 @@ sp.crud.ipBlackList.list=Listing BlackIpAddress
 sp.crud.ipBlackList.admin= Manage Black List de IP
 sp.crud.ipBlackList.exit= Already exists IP
 sp.common.actions.delete= Delete IP
+
+#product
+sp.common.PartNumber= Part Number
+sp.common.descripton= Description
+sp.common.amount= Monto 
+sp.common.stockMin=Stock Min
+sp.common.stockMax=Stock Max
+sp.common.status=Status
+sp.common.actNpNsn=actNpNsn
+sp.common.ubicationBox=Ubication Box
+sp.common.ubicationFolder=Ubication Folder
+sp.common.inictialAmount=Initial Amount
+sp.common.realAmount.product=Real Amount
+sp.common.stockMin=Min Stock
+sp.common.stockMax=Max Stock
+sp.common.batchNumber=Bacht Number
+sp.common.amounts.values=Amounts
+sp.common.stock=Stocks
+sp.common.stock.min.error=the minimum stock field can not be greater than the maximum stock
