Cambios incoporación de exportación PDF

--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1205,3 +1205,5 @@ sp.common.batchNumber=Bacht Number
 sp.common.amounts.values=Amounts
 sp.common.stock=Stocks
 sp.common.stock.min.error=the minimum stock field can not be greater than the maximum stock
+sp.common.actions.download.pdf=Export PDF
+sp.crud.product.list.reporte=Products Report
