permiso stock product

--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -68,6 +68,8 @@ sp.common.actions.view.payment= View Payment
 sp.common.actions.add=Add
 sp.common.actions.add.tooltip=Add new Record
 sp.common.actions.delete=Delete
+sp.common.actions.remove=Expenses
+sp.common.actions.income=Income
 sp.common.actions.save=Save
 sp.common.actions.cancel=Cancel
 sp.common.actions.history=Historical
