--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1214,6 +1214,7 @@ sp.common.date.cure=Expiration Cure
 sp.common.serials=Serials
 sp.common.lot=Lot
 sp.common.select=Select
+sp.common.work.order=Work Order
 sp.common.stock.min.error=the minimum stock field can not be greater than the maximum stock
 sp.common.actions.download.pdf=Export PDF
 sp.crud.product.list.reporte=Products Report
