--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1218,3 +1218,4 @@ sp.common.work.order=Work Order
 sp.common.stock.min.error=the minimum stock field can not be greater than the maximum stock
 sp.common.actions.download.pdf=Export PDF
 sp.crud.product.list.reporte=Products Report
+sp.error.value.quantity=The amount must be less than or equal to the stock
