prueba de add y egress stock

--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1219,3 +1219,4 @@ sp.common.stock.min.error=the minimum stock field can not be greater than the ma
 sp.common.actions.download.pdf=Export PDF
 sp.crud.product.list.reporte=Products Report
 sp.error.value.quantity=The amount must be less than or equal to the stock
+sp.error.validate.transaction=It must indicate serial and quantity to graduate
