--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1220,3 +1220,13 @@ sp.common.actions.download.pdf=Export PDF
 sp.crud.product.list.reporte=Products Report
 sp.error.value.quantity=The amount must be less than or equal to the stock
 sp.error.validate.transaction=It must indicate serial and quantity to graduate
+
+sp.munitoring.expirate=Expirate
+sp.munitoring.expirate.next=Next Expirate
+sp.munitoring.expirate.curado=Curate
+sp.munitoring.expirate.min.stock=Min Stock
+sp.munitoring.expirate.day=Expiration day
+sp.munitoring=Munitoring
+
+
+
