--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1218,6 +1218,9 @@ sp.common.work.order=Work Order
 sp.common.stock.min.error=the minimum stock field can not be greater than the maximum stock
 sp.common.actions.download.pdf=Export PDF
 sp.crud.product.list.reporte=Products Report
+sp.crud.product.list.stock =Product Stock List 
+sp.crud.product.detail.stock =Product Detail in Stock 
+sp.common.stock.edit=Edit Stock
 sp.error.value.quantity=The amount must be less than or equal to the stock
 sp.error.validate.transaction=It must indicate serial and quantity to graduate
 
