--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -66,6 +66,7 @@ sp.common.actions.forward=Generate new Password and Forward Accunt Data (Email -
 sp.common.actions.view.detail=View Detail
 sp.common.actions.view.payment= View Payment
 sp.common.actions.add=Add
+sp.common.actions.egress=Egress
 sp.common.actions.add.tooltip=Add new Record
 sp.common.actions.delete=Delete
 sp.common.actions.remove=Expenses
@@ -1090,7 +1091,7 @@ sp.fileExcel.selectedOneFile=It should be selecting only one file to
 sp.fileExcel.nameProvider=Provider
 sp.fileExcel.commission1=Comision
 sp.fileExcel.selectProfile=Select a profile
-sp.file.commission.topUp.letterHead1=Alodiga Multi-Level Channel
+sp.file.commission.topUp.letterHead1=CG Turbines 
 sp.file.commission.topUp.letterHead2=Domestic & International Mobile Recharges Commissions
 sp.file.commission.topUp.letterHead3=Alodiga Mejora tu vida
 
@@ -1187,7 +1188,6 @@ sp.common.date.ip=Date
 sp.crud.ipBlackList.list=Listing BlackIpAddress
 sp.crud.ipBlackList.admin= Manage Black List de IP
 sp.crud.ipBlackList.exit= Already exists IP
-sp.common.actions.delete= Delete IP
 
 #product
 sp.common.PartNumber= Part Number
@@ -1210,17 +1210,46 @@ sp.common.condition=Condition
 sp.common.customer=Customer
 sp.common.observations=Observations
 sp.common.date.expiration=Expiration Date
+sp.common.departure.date=Departure date
 sp.common.date.cure=Expiration Cure
 sp.common.serials=Serials
 sp.common.lot=Lot
 sp.common.select=Select
 sp.common.work.order=Work Order
+sp.common.transit=Transit
+sp.common.quarantine=Quarantine
+sp.common.wait=Wait
+sp.common.meteorological=Meteorological Control
 sp.common.stock.min.error=the minimum stock field can not be greater than the maximum stock
 sp.common.actions.download.pdf=Export PDF
 sp.crud.product.list.reporte=Products Report
 sp.crud.product.list.stock =Product Stock List 
 sp.crud.product.detail.stock =Product Detail in Stock 
 sp.common.stock.edit=Edit Stock
+sp.common.stock.add=Add Stock
+sp.common.stock.egress=Egress Stock
+sp.crud.product.list.transit =Product Transit List 
+sp.crud.product.detail.transit =Product Detail in Transit 
+sp.common.transit.edit=Edit Transit
+sp.common.transit.add=Add Transit
+sp.common.transit.egress=Egress Transit
+sp.crud.product.list.quarantine =Product Quarantine List 
+sp.crud.product.detail.quarantine =Product Detail in Quarantine 
+sp.common.quarantine.edit=Edit Quarantine
+sp.common.quarantine.add=Add Quarantine
+sp.common.quarantine.egress=Egress Quarantine
+sp.crud.product.list.wait =Product Wait List 
+sp.crud.product.detail.wait =Product Detail in Wait
+sp.common.wait.edit=Edit Wait
+sp.common.wait.add=Add Wait
+sp.common.wait.egress=Egress Wait
+sp.common.meteorological.edit=Edit Meteorological Control
+sp.common.meteorological.add=Add Meteorological Control
+sp.common.meteorological.egress=Egress Meteorological Control
+sp.crud.product.list.meteorological =Product Meteorological Control List 
+sp.crud.product.detail.meteorological =Product Detail in Meteorological Control 
+sp.common.meteorological.edit=Edit Meteorological Control
+sp.common.quaratine.reason=Quarantine Reason
 sp.error.value.quantity=The amount must be less than or equal to the stock
 sp.error.validate.transaction=It must indicate serial and quantity to graduate
 
