Salir de cuarentena

--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1250,6 +1250,7 @@ sp.crud.product.list.meteorological =Product Meteorological Control List
 sp.crud.product.detail.meteorological =Product Detail in Meteorological Control 
 sp.common.meteorological.edit=Edit Meteorological Control
 sp.common.quaratine.reason=Quarantine Reason
+sp.common.work.to.do=Work to do
 sp.error.value.quantity=The amount must be less than or equal to the stock
 sp.error.validate.transaction=It must indicate serial and quantity to graduate
 
