cambios en cuarentena

--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1210,6 +1210,7 @@ sp.common.condition=Condition
 sp.common.customer=Customer
 sp.common.observations=Observations
 sp.common.date.expiration=Expiration Date
+sp.common.date.add=Entry Date
 sp.common.departure.date=Departure date
 sp.common.date.cure=Expiration Cure
 sp.common.serials=Serials
