Cambios al egresar productos

--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1220,7 +1220,7 @@ sp.common.work.order=Work Order
 sp.common.transit=Transit
 sp.common.quarantine=Quarantine
 sp.common.wait=Wait
-sp.common.meteorological=Meteorological Control
+sp.common.meteorological=Metrological Control
 sp.common.stock.min.error=the minimum stock field can not be greater than the maximum stock
 sp.common.actions.download.pdf=Export PDF
 sp.crud.product.list.reporte=Products Report
@@ -1244,12 +1244,12 @@ sp.crud.product.detail.wait =Product Detail in Wait
 sp.common.wait.edit=Edit Wait
 sp.common.wait.add=Add Wait
 sp.common.wait.egress=Egress Wait
-sp.common.meteorological.edit=Edit Meteorological Control
-sp.common.meteorological.add=Add Meteorological Control
-sp.common.meteorological.egress=Egress Meteorological Control
-sp.crud.product.list.meteorological =Product Meteorological Control List 
-sp.crud.product.detail.meteorological =Product Detail in Meteorological Control 
-sp.common.meteorological.edit=Edit Meteorological Control
+sp.common.meteorological.edit=Edit Metrological Control
+sp.common.meteorological.add=Add Metrological Control
+sp.common.meteorological.egress=Egress Metrological Control
+sp.crud.product.list.meteorological =Product Metrological Control List 
+sp.crud.product.detail.meteorological =Product Detail in Metrological Control 
+sp.common.meteorological.edit=Edit Metrological Control
 sp.common.quaratine.reason=Quarantine Reason
 sp.common.work.to.do=Work to do
 sp.error.value.quantity=The amount must be less than or equal to the stock
