--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -2,7 +2,7 @@
 
 sp.common.page.title=CG Tubines
 sp.common.page.home=Home
-sp.common.page.invoice=Invoice
+sp.common.page.invoice=Invoice/Remito
 sp.common.page.admin.invoice= Invoice Manager
 sp.common.page.detail.invoice= Invoice Detail
 sp.common.page.cancel.invoice= Invoice indicated already been PAID.
