laber Control Metrologico

--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1209,7 +1209,7 @@ sp.common.quantity=Quantity
 sp.common.condition=Condition
 sp.common.customer=Customer
 sp.common.observations=Observations
-sp.common.date.expiration=Expiration Date
+sp.common.date.expiration=Due Date
 sp.common.date.add=Entry Date
 sp.common.departure.date=Departure date
 sp.common.date.cure=Expiration Cure
@@ -1252,6 +1252,17 @@ sp.crud.product.detail.meteorological =Product Detail in Metrological Control
 sp.common.meteorological.edit=Edit Metrological Control
 sp.common.quaratine.reason=Quarantine Reason
 sp.common.work.to.do=Work to do
+sp.common.control.designation=Designation
+sp.common.control.id.instrumnet=ID Instrument
+sp.common.control.model=Make and Model
+sp.common.control.serial=Serial Number
+sp.common.control.rank=Rank
+sp.common.control.date.calibration=Date of Calibration
+sp.common.control.entity.calibration=Calibration Entity
+sp.common.control.due.date=Due Date
+sp.common.control.ubication=Ubication
+sp.common.control.minimun.scale=Minimum Scale
+sp.common.control.type=Type
 sp.error.value.quantity=The amount must be less than or equal to the stock
 sp.error.validate.transaction=It must indicate serial and quantity to graduate
 
@@ -1259,7 +1270,7 @@ sp.munitoring.expirate=Expirate
 sp.munitoring.expirate.next=Next Expirate
 sp.munitoring.expirate.curado=Curate
 sp.munitoring.expirate.min.stock=Min Stock
-sp.munitoring.expirate.day=Expiration day
+sp.munitoring.expirate.day=Due Date
 sp.munitoring=Munitoring
 
 
