--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1254,7 +1254,8 @@ sp.common.quaratine.reason=Quarantine Reason
 sp.common.work.to.do=Work to do
 sp.common.control.designation=Designation
 sp.common.control.id.instrumnet=ID Instrument
-sp.common.control.model=Make and Model
+sp.common.control.model=Model
+sp.common.control.braund=Braund
 sp.common.control.serial=Serial Number
 sp.common.control.rank=Rank
 sp.common.control.date.calibration=Date of Calibration
