cambios control metrologico

--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1247,7 +1247,7 @@ sp.common.wait.egress=Egress Wait
 sp.common.meteorological.edit=Edit Metrological Control
 sp.common.meteorological.add=Add Metrological Control
 sp.common.meteorological.egress=Egress Metrological Control
-sp.crud.product.list.meteorological =Product Metrological Control List 
+sp.crud.product.list.meteorological=Metrological Control List 
 sp.crud.product.detail.meteorological =Product Detail in Metrological Control 
 sp.common.meteorological.edit=Edit Metrological Control
 sp.common.quaratine.reason=Quarantine Reason
@@ -1274,5 +1274,18 @@ sp.munitoring.expirate.min.stock=Min Stock
 sp.munitoring.expirate.day=Due Date
 sp.munitoring=Munitoring
 
+sp.crud.braund.list=List Markes
+sp.crud.braund.data=Mark Data
+sp.crud.braund.add=Add Mark
+sp.crud.braund.edit=Edit Mark
+sp.crud.braund.view=View Mark
+sp.crud.mobileOperator.list=List Models
+sp.crud.mobileOperator.data=Model Data
+sp.crud.mobileOperator.add=Add Model
+sp.crud.mobileOperator.edit=Edit Model
+sp.crud.mobileOperator.view=View Model
 
+sp.common.braund.name=Make
+sp.common.model.name=Modelo
 
+sp.crud.metrological.control.list.reporte=Metrological Control Report
