agregar ente de calibracion

--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1,19 +1,19 @@
 # COMMONS
 
-sp.common.page.title=CG Tubines
+sp.common.page.title=CG Turbines SRL
 sp.common.page.home=Home
-sp.common.page.invoice=Invoice/Remito
+sp.common.page.invoice=Remito/Invoice
 sp.common.page.admin.invoice= Invoice Manager
 sp.common.page.detail.invoice= Invoice Detail
 sp.common.page.cancel.invoice= Invoice indicated already been PAID.
 sp.common.page.siteMap=Site map
 sp.common.page.terms=Legal terms
 sp.common.page.about=About us
-sp.common.page.copyright=Copyright 2019 - CG TURBINES C.A. All rights reserved.
-sp.common.page.copyright1=Copyright 2019 - CG TURBINES C.A.
+sp.common.page.copyright=Copyright 2019 - CG Turbines SRL All rights reserved.
+sp.common.page.copyright1=Copyright 2019 - CG Turbines SRL
 sp.common.page.copyright2=All rights reserved.
 sp.common.page.powerby=Powered by
-sp.common.page.alodiga=CG TURBINES
+sp.common.page.alodiga=CG Turbines SRL
 sp.common.myStatistics=My Statistics
 sp.common.printableInvoice=Printable
 sp.common.close=Close
@@ -151,7 +151,7 @@ sp.common.endingDate=Ending Date
 sp.common.event=Event
 sp.common.from=From
 sp.common.to=To
-sp.common.amount=Amount
+sp.common.amount=FOB Cif price
 sp.common.goalAmount=Goal amount
 sp.common.bonusAmount=Bonus
 sp.common.bonificationAmount=Amount Bonification
@@ -1091,7 +1091,7 @@ sp.fileExcel.selectedOneFile=It should be selecting only one file to
 sp.fileExcel.nameProvider=Provider
 sp.fileExcel.commission1=Comision
 sp.fileExcel.selectProfile=Select a profile
-sp.file.commission.topUp.letterHead1=CG Turbines 
+sp.file.commission.topUp.letterHead1=CG Turbines SRL 
 sp.file.commission.topUp.letterHead2=Domestic & International Mobile Recharges Commissions
 sp.file.commission.topUp.letterHead3=Alodiga Mejora tu vida
 
@@ -1192,11 +1192,11 @@ sp.crud.ipBlackList.exit= Already exists IP
 #product
 sp.common.PartNumber= Part Number
 sp.common.descripton= Description
-sp.common.amount= Monto 
+sp.common.amount=FOB Cif price 
 sp.common.stockMin=Stock Min
 sp.common.stockMax=Stock Max
 sp.common.status=Status
-sp.common.actNpNsn=actNpNsn
+sp.common.actNpNsn=ALT PN/NSN
 sp.common.ubicationBox=Ubication Box
 sp.common.ubicationFolder=Ubication Folder
 sp.common.inictialAmount=Initial Amount
@@ -1279,13 +1279,20 @@ sp.crud.braund.data=Mark Data
 sp.crud.braund.add=Add Mark
 sp.crud.braund.edit=Edit Mark
 sp.crud.braund.view=View Mark
-sp.crud.mobileOperator.list=List Models
-sp.crud.mobileOperator.data=Model Data
-sp.crud.mobileOperator.add=Add Model
-sp.crud.mobileOperator.edit=Edit Model
-sp.crud.mobileOperator.view=View Model
+sp.crud.model.list=List Models
+sp.crud.model.data=Model Data
+sp.crud.model.add=Add Model
+sp.crud.model.edit=Edit Model
+sp.crud.model.view=View Model
+sp.crud.enter.list=List Calibration Entity
+sp.crud.enter.data=Calibration Entity Data
+sp.crud.enter.add=Add Calibration Entity
+sp.crud.enter.edit=Edit Calibration Entity
+sp.crud.enter.view=View Calibration Entity
 
 sp.common.braund.name=Make
-sp.common.model.name=Modelo
+sp.common.model.name=Model
+sp.common.enter.name=Calibration Entity
 
 sp.crud.metrological.control.list.reporte=Metrological Control Report
+sp.common.dni=DNI/CUIL
