crear proceso automatico

--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1296,3 +1296,7 @@ sp.common.enter.name=Calibration Entity
 
 sp.crud.metrological.control.list.reporte=Metrological Control Report
 sp.common.dni=DNI/CUIL
+
+sp.automatic.service.stock.update=Update Stock, Quarantine and Metrological Control
+sp.automatic.service.stock.update.description=Validate due dates
+sp.automatic.service.options=Options
