--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1029,7 +1029,7 @@ sp.automatic.commission.failure=Operation has failed. Please contact customer su
 sp.automatic.commission.timeoutMessage=Timeout has been programmed to be in 1 minute
 sp.automatic.service.name=Service name
 sp.automatic.service.date=Execution date
-sp.automatic.service.description=Description.
+sp.automatic.service.description=Description
 sp.automatic.service.topUp.commission=Top-Up Commission Updates.
 sp.automatic.service.topUp.commission.description=Checks the percentages commission changes pending to update.
 sp.automatic.service.topUp.prepay.nation.update=Prepay Nation Top-Ups Update
