--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1220,6 +1220,8 @@ sp.common.work.order=Work Order
 sp.common.transit=Transit
 sp.common.quarantine=Quarantine
 sp.common.wait=Wait
+sp.common.form=Form
+sp.common.clear=Clear
 sp.common.meteorological=Metrological Control
 sp.common.stock.min.error=the minimum stock field can not be greater than the maximum stock
 sp.common.actions.download.pdf=Export PDF
