--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -79,6 +79,7 @@ sp.common.actions.continue=Continue
 sp.common.actions.proccess=Process
 sp.common.actions.search=Search
 sp.common.actions.search.filter.tooltip=Search using filters
+sp.common.actions.remove.customer.tooltip=Remove Customer
 sp.common.actions.force = Forcing Billing
 sp.common.actions.download=Download
 sp.common.actions.download.tooltip=Download report
