--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1258,9 +1258,10 @@ sp.common.meteorological.edit=Edit Metrological Control
 sp.common.quaratine.reason=Quarantine Reason
 sp.common.work.to.do=Work to do
 sp.common.control.designation=Designation
-sp.common.control.id.instrumnet=ID Instrument
+sp.common.control.id.instrument=ID Instrument
 sp.common.control.model=Model
 sp.common.control.braund=Braund
+sp.common.control.braund.model=Make and model
 sp.common.control.serial=Serial Number
 sp.common.control.rank=Rank
 sp.common.control.date.calibration=Date of Calibration
