--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -69,6 +69,8 @@ sp.common.actions.add=Add
 sp.common.actions.egress=Egress
 sp.common.actions.add.tooltip=Add new Record
 sp.common.actions.delete=Delete
+sp.common.actions.delete.confirm=Delete Confirm
+sp.common.actions.delete.question=Are you sure you wish to delete this record?
 sp.common.actions.remove=Expenses
 sp.common.actions.income=Income
 sp.common.actions.save=Save
@@ -678,6 +680,7 @@ sp.error.purchase.balance.zero=You must set at least one product product greater
 sp.error.declined.creditCard= Credit Card Declined
 sp.error.fileupload.invalid.format=File format is invalid
 sp.error.fileupload.invalid.file=File is invalid
+sp.error.part.number.exist=Registered Part Number
 
 
 #MENUS
