--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -109,6 +109,7 @@ sp.common.provider=Provider
 sp.common.integrationType=Integration Type
 sp.common.taxInclude=Tax include
 sp.common.status=Status
+sp.common.active=Active
 sp.common.referenceCode=Reference Code
 sp.common.urlRates=Rates URL
 sp.common.urlAccessNumbers=Access Numbers URL
