--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -397,6 +397,8 @@ sp.common.ejbChecker.good=Ejbs with reference
 sp.common.ejbChecker.bad=Ejbs without reference
 sp.common.tooltip.add=You can add until 10 pinfrees clicking this button or pressing ENTER.
 sp.common.max45= Max 45
+sp.common.max75= Max 75
+sp.common.max150= Max 150
 sp.common.max255= Max 255
 sp.common.max140= Characters available 140
 sp.common.max500= Characters available 500
@@ -1234,6 +1236,10 @@ sp.common.meteorological=Metrological Control
 sp.common.stock.min.error=the minimum stock field can not be greater than the maximum stock
 sp.common.actions.download.pdf=Export PDF
 sp.crud.product.list.reporte=Products Report
+sp.crud.product.list.reporte.stock=Stock Products Report
+sp.crud.product.list.reporte.quarantine=Quarantined Products Report
+sp.crud.product.list.reporte.wait=Wait Products Report
+sp.crud.product.list.reporte.transit=Transit Products Report
 sp.crud.product.list.stock =Product Stock List 
 sp.crud.product.detail.stock =Product Detail in Stock 
 sp.common.stock.edit=Edit Stock
@@ -1308,6 +1314,7 @@ sp.common.enter.name=Calibration Entity
 sp.crud.metrological.control.list.reporte=Metrological Control Report
 sp.common.dni=DNI/CUIL
 
-sp.automatic.service.stock.update=Update Stock, Quarantine and Metrological Control
+sp.automatic.service.stock.update=Update Stock and Quarantine
+sp.automatic.service.control.update=Update Quarantine and Metrological Control
 sp.automatic.service.stock.update.description=Validate due dates
 sp.automatic.service.options=Options
