--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -594,6 +594,7 @@ sp.error.login.exist=There is already an acoount with this login.
 sp.error.email.exist=There is already an acoount with this email
 sp.error.products.notSelected=You must select at least one product.
 sp.error.providers.notSelected=You must select at least one provider.
+sp.error.customer.notSelected=You must select at least one customer.
 sp.error.accountType.notSelected=You must select the Account Type.
 sp.error.tinType.notSelected.single=You must select the Identification Type.
 sp.error.gender.notSelected=You must select at least one gender.
