--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -685,7 +685,7 @@ sp.error.declined.creditCard= Credit Card Declined
 sp.error.fileupload.invalid.format=File format is invalid
 sp.error.fileupload.invalid.file=File is invalid
 sp.error.part.number.exist=Registered Part Number
-
+sp.error.instrument.exist=Registered IntrumentID
 
 #MENUS
 
