--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -1231,6 +1231,8 @@ sp.common.work.order=Work Order
 sp.common.transit=Transit
 sp.common.quarantine=Quarantine
 sp.common.wait=Wait
+sp.common.entry=Entry
+sp.common.exit=Exit
 sp.common.form=Form
 sp.common.clear=Clear
 sp.common.meteorological=Metrological Control
