--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -43,7 +43,7 @@ sp.common.fullName=Full name
 sp.common.date=Date
 sp.common.enabled=Enabled
 sp.common.disabled=Disabled
-sp.common.creationDate=Creation date
+sp.common.creationDate=Entry date
 sp.common.email=Email
 sp.common.gender=Gender
 sp.common.birthday=Birthday
