--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -153,6 +153,10 @@ sp.common.save.success=Succesfully Saved
 sp.common.beginningDate=Beginning Date
 sp.common.responseDate=Response Date
 sp.common.endingDate=Ending Date
+sp.common.beginningDate.Exit=Departure Date from
+sp.common.endingDate.Exit=to
+sp.common.beginningDate.control=Ending Date from
+sp.common.endingDate.control=to
 sp.common.event=Event
 sp.common.from=From
 sp.common.to=To
