--- a/WebContent/WEB-INF/i3-label.properties
+++ b/WebContent/WEB-INF/i3-label.properties
@@ -494,6 +494,8 @@ sp.crud.profile.permission.entity=Entity
 sp.crud.enterprise.admin=Enterprise admin
 sp.crud.enterprise.list=Enterprise List
 sp.crud.enterprise.add=Add Enterprise
+sp.crud.enterprise.add.email=Add Email
+sp.crud.enterprise.added.email=Emails Added
 sp.crud.enterprise.edit=Edit Enterprise
 sp.crud.enterprise.view=View Enterprise
 sp.crud.user.list=User List
